compiler/tests/success/x86-64/test_lnot.jazz
param int n = 17;

export fn f(reg u64 r1) -> reg u64, reg u64 {
reg u64 r = r1;
r1  = !r;
r   = !n;
return r1, r;
}

export fn g(reg u64 r1) -> reg u64 {
reg u64 r;
r  = r1; 
r  = !r;  
return r;
}
