compiler/tests/fail/register_allocation/x86-64/unknown_variable.jazz
fn f () -> reg u64 {
  reg u64 r;
  return r;
}

export fn main (reg u64 x) -> reg u64 {
  reg u64 r;
  r = f ();
  return r;
}
